2015-11-19
	* 0.7.8
		– Palettes fix in TCA
2015-11-20
	* 0.7.9
		– Updated icons for TYPO3 7.6

2015-11-23
	* 0.8.0
		– TYPO3 6.2 use namespace bug fix

2016-11-11
	* 0.9.0
		– TYPO3 8.3 compatibility
		– Content type icon fix in page module
2017-01-09
	* 0.9.1
		– TYPO3 8.5 compatibility
2017-03-16
	* 0.9.2
		– TYPO3 8.6 compatibility
2017-03-29
	* 1.0.0
		– Dropping support for older than 8.5 TYPO3 versions
		– Supports fluid_styled_content only
		– Custom cover image support
		– Custom play button option
		– Base CSS file added
		– JavaScript API enabled and scripts for custom cover image and play button
2018-01-06
	* 1.1.0
		– BREAKING CHANGES for custom templates: Need to modify content arrays {autoplay} to {data.tx_youtubevideo_autoplay} and so on.
		– DataProcessing instead of controller
		– Cover image title and description as image overlay text
2018-02-13
	* 1.2.0
		– Bug fix for playing multiple videos with cover image on same page
		– Improved mobile template
		– Custom play button and cover image fetching from youtube turned on by default in TypoScript
		– Dedicated cover title and text fields
2018-02-20
	* 1.2.1
		– jQuery based breakpoints for cover text and play button location styles depending on video container width
		– Checking available maxres cover image size and fall back to smaller if not present
		– Inline SVG custom play button and CSS controlled colors
		– Constant editor
		– Show cover title and text in back end preview besides the video
2018-02-27
	* 1.2.2
		– Easier to style and change play button, cover image moved to Partials
		– Play button colour change compatible with ext:microtemplate
2018-03-20
	* 1.2.3
		– Composer package added, repo moved to github
		– README.rst added
2018-02-13
	* 1.3.0
		– TYPO3 9.5 compatible only
		– Showinfo removed as depricated in youtube
		– Add mute parameter if autoplay is on
		– Rename .ts to .typoscript
		- Automatically set language by the site configuration